// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ABQ handles ID generation for tests in loops 1`] = `
Array [
  Array [
    Object {
      "display_name": "looper i == i",
      "id": "__tests__/looped.test.js@3:7#0",
      "lineage": Array [
        "looper",
      ],
      "location": Object {
        "column": 7,
        "file": "<<REPLACED>>/e2e/abq/__tests__/looped.test.js",
        "line": 3,
      },
      "meta": Object {},
      "output": null,
      "runtime": 12,
      "status": Object {
        "type": "success",
      },
    },
    Object {
      "display_name": "looper i == i",
      "id": "__tests__/looped.test.js@3:7#1",
      "lineage": Array [
        "looper",
      ],
      "location": Object {
        "column": 7,
        "file": "<<REPLACED>>/e2e/abq/__tests__/looped.test.js",
        "line": 3,
      },
      "meta": Object {},
      "output": null,
      "runtime": 12,
      "status": Object {
        "type": "success",
      },
    },
    Object {
      "display_name": "looper i == i",
      "id": "__tests__/looped.test.js@3:7#2",
      "lineage": Array [
        "looper",
      ],
      "location": Object {
        "column": 7,
        "file": "<<REPLACED>>/e2e/abq/__tests__/looped.test.js",
        "line": 3,
      },
      "meta": Object {},
      "output": null,
      "runtime": 12,
      "status": Object {
        "type": "success",
      },
    },
    Object {
      "display_name": "looper i == i",
      "id": "__tests__/looped.test.js@3:7#3",
      "lineage": Array [
        "looper",
      ],
      "location": Object {
        "column": 7,
        "file": "<<REPLACED>>/e2e/abq/__tests__/looped.test.js",
        "line": 3,
      },
      "meta": Object {},
      "output": null,
      "runtime": 12,
      "status": Object {
        "type": "success",
      },
    },
    Object {
      "display_name": "looper i == i",
      "id": "__tests__/looped.test.js@3:7#4",
      "lineage": Array [
        "looper",
      ],
      "location": Object {
        "column": 7,
        "file": "<<REPLACED>>/e2e/abq/__tests__/looped.test.js",
        "line": 3,
      },
      "meta": Object {},
      "output": null,
      "runtime": 12,
      "status": Object {
        "type": "success",
      },
    },
  ],
]
`;

exports[`ABQ mode handles errors in a test 1`] = `
Array [
  Array [
    Object {
      "display_name": "this test is erroring",
      "id": "__tests__/errors.test.js@9:1#0",
      "lineage": Array [],
      "location": Object {
        "column": 1,
        "file": "<<REPLACED>>/e2e/abq/__tests__/errors.test.js",
        "line": 9,
      },
      "meta": Object {},
      "output": "  ● this test is erroring

    can't catch me

       8 |
       9 | test('this test is erroring', () => {
    > 10 |   throw new Error("can't catch me");
         |         ^
      11 | });
      12 |

      at Object.<anonymous> (__tests__/errors.test.js:10:9)
",
      "runtime": 12,
      "status": Object {
        "backtrace": Array [
          "at Object.<anonymous> (<<REPLACED>>/e2e/abq/__tests__/errors.test.js:10:9)",
        ],
        "exception": "can't catch me",
        "type": "failure",
      },
    },
  ],
]
`;

exports[`ABQ mode handles errors outside of test execution 1`] = `
Array [
  Array [
    Object {
      "display_name": "<<REPLACED>>/e2e/abq/__tests__/error_setup.test.js",
      "id": "<<REPLACED>>/e2e/abq/__tests__/error_setup.test.js",
      "meta": Object {},
      "output": "  ●  can't catch me

       7 |  */
       8 |
    >  9 | throw new Error("can't catch me");
         |       ^
      10 |
      11 | // eslint-disable-next-line no-unreachable
      12 | test('true', () => {

      at Object.<anonymous> (__tests__/error_setup.test.js:9:7)
",
      "runtime": 12,
      "status": Object {
        "backtrace": Array [
          "Error: can't catch me",
          "    at Object.<anonymous> (<<REPLACED>>/e2e/abq/__tests__/error_setup.test.js:9:7)",
          "    at Runtime._execModule (<<REPLACED>>/packages/jest-runtime/build/index.js:1532:24)",
          "    at Runtime._loadModule (<<REPLACED>>/packages/jest-runtime/build/index.js:1115:12)",
          "    at Runtime.requireModule (<<REPLACED>>/packages/jest-runtime/build/index.js:975:12)",
          "<<TEST_RUNNER>>",
          "<<NODE INTERNAL>>",
          "    at runTestInternal (<<REPLACED>>/packages/jest-runner/build/runTest.js:287:16)",
          "    at runTest (<<REPLACED>>/packages/jest-runner/build/runTest.js:347:7)",
          "    at <<REPLACED>>/packages/jest-runner/build/index.js:214:11",
        ],
        "exception": "can't catch me",
        "type": "error",
      },
    },
  ],
]
`;

exports[`ABQ mode handles skipped tests 1`] = `
Array [
  Array [
    Object {
      "display_name": "one skipped test",
      "id": "__tests__/skip.test.js@9:6#0",
      "lineage": Array [],
      "location": Object {
        "column": 6,
        "file": "<<REPLACED>>/e2e/abq/__tests__/skip.test.js",
        "line": 9,
      },
      "meta": Object {},
      "output": null,
      "runtime": 12,
      "status": Object {
        "type": "pending",
      },
    },
    Object {
      "display_name": "other skipped test",
      "id": "__tests__/skip.test.js@11:6#1",
      "lineage": Array [],
      "location": Object {
        "column": 6,
        "file": "<<REPLACED>>/e2e/abq/__tests__/skip.test.js",
        "line": 11,
      },
      "meta": Object {},
      "output": null,
      "runtime": 12,
      "status": Object {
        "type": "pending",
      },
    },
  ],
]
`;

exports[`ABQ mode handles todo tests 1`] = `
Array [
  Array [
    Object {
      "display_name": "one todo test",
      "id": "__tests__/todo.test.js@9:6#0",
      "lineage": Array [],
      "location": Object {
        "column": 6,
        "file": "<<REPLACED>>/e2e/abq/__tests__/todo.test.js",
        "line": 9,
      },
      "meta": Object {},
      "output": null,
      "runtime": 12,
      "status": Object {
        "type": "todo",
      },
    },
    Object {
      "display_name": "other todo test",
      "id": "__tests__/todo.test.js@11:6#1",
      "lineage": Array [],
      "location": Object {
        "column": 6,
        "file": "<<REPLACED>>/e2e/abq/__tests__/todo.test.js",
        "line": 11,
      },
      "meta": Object {},
      "output": null,
      "runtime": 12,
      "status": Object {
        "type": "todo",
      },
    },
  ],
]
`;

exports[`ABQ_GENERATE_MANIFEST sends the manifest to the socket 1`] = `
Array [
  Object {
    "manifest": Object {
      "init_meta": Object {},
      "members": Array [
        Object {
          "id": "__tests__/equals.test.js",
          "meta": Object {
            "fileName": "__tests__/equals.test.js",
          },
          "tags": Array [],
          "type": "test",
        },
        Object {
          "id": "__tests__/error_setup.test.js",
          "meta": Object {
            "fileName": "__tests__/error_setup.test.js",
          },
          "tags": Array [],
          "type": "test",
        },
        Object {
          "id": "__tests__/errors.test.js",
          "meta": Object {
            "fileName": "__tests__/errors.test.js",
          },
          "tags": Array [],
          "type": "test",
        },
        Object {
          "id": "__tests__/failing.test.js",
          "meta": Object {
            "fileName": "__tests__/failing.test.js",
          },
          "tags": Array [],
          "type": "test",
        },
        Object {
          "id": "__tests__/looped.test.js",
          "meta": Object {
            "fileName": "__tests__/looped.test.js",
          },
          "tags": Array [],
          "type": "test",
        },
        Object {
          "id": "__tests__/skip.test.js",
          "meta": Object {
            "fileName": "__tests__/skip.test.js",
          },
          "tags": Array [],
          "type": "test",
        },
        Object {
          "id": "__tests__/sum.test.js",
          "meta": Object {
            "fileName": "__tests__/sum.test.js",
          },
          "tags": Array [],
          "type": "test",
        },
        Object {
          "id": "__tests__/todo.test.js",
          "meta": Object {
            "fileName": "__tests__/todo.test.js",
          },
          "tags": Array [],
          "type": "test",
        },
      ],
    },
  },
]
`;

exports[`ABQ_SOCKET runs Jest in ABQ mode 1`] = `
Array [
  Array [
    Object {
      "display_name": "this test is failing",
      "id": "__tests__/failing.test.js@9:1#0",
      "lineage": Array [],
      "location": Object {
        "column": 1,
        "file": "<<REPLACED>>/e2e/abq/__tests__/failing.test.js",
        "line": 9,
      },
      "meta": Object {},
      "output": "  ● this test is failing

    expect(received).toBe(expected) // Object.is equality

    Expected: false
    Received: true

       8 |
       9 | test('this test is failing', () => {
    > 10 |   expect(true).toBe(false);
         |                ^
      11 | });
      12 |
      13 | test('this test is also failing', () => {

      at Object.toBe (__tests__/failing.test.js:10:16)
",
      "runtime": 12,
      "status": Object {
        "backtrace": Array [
          "at Object.toBe (<<REPLACED>>/e2e/abq/__tests__/failing.test.js:10:16)",
        ],
        "exception": "expect(received).toBe(expected) // Object.is equality

Expected: false
Received: true",
        "type": "failure",
      },
    },
    Object {
      "display_name": "this test is also failing",
      "id": "__tests__/failing.test.js@13:1#1",
      "lineage": Array [],
      "location": Object {
        "column": 1,
        "file": "<<REPLACED>>/e2e/abq/__tests__/failing.test.js",
        "line": 13,
      },
      "meta": Object {},
      "output": "  ● this test is also failing

    expect(received).toBe(expected) // Object.is equality

    Expected: false
    Received: true

      12 |
      13 | test('this test is also failing', () => {
    > 14 |   expect(true).toBe(false);
         |                ^
      15 | });
      16 |

      at Object.toBe (__tests__/failing.test.js:14:16)
",
      "runtime": 12,
      "status": Object {
        "backtrace": Array [
          "at Object.toBe (<<REPLACED>>/e2e/abq/__tests__/failing.test.js:14:16)",
        ],
        "exception": "expect(received).toBe(expected) // Object.is equality

Expected: false
Received: true",
        "type": "failure",
      },
    },
  ],
  Array [
    Object {
      "display_name": "the + operator 1 + 2 equals 3",
      "id": "__tests__/sum.test.js@10:3#0",
      "lineage": Array [
        "the + operator",
      ],
      "location": Object {
        "column": 3,
        "file": "<<REPLACED>>/e2e/abq/__tests__/sum.test.js",
        "line": 10,
      },
      "meta": Object {},
      "output": null,
      "runtime": 12,
      "status": Object {
        "type": "success",
      },
    },
    Object {
      "display_name": "the + operator 2 + 3 equals 5",
      "id": "__tests__/sum.test.js@14:3#1",
      "lineage": Array [
        "the + operator",
      ],
      "location": Object {
        "column": 3,
        "file": "<<REPLACED>>/e2e/abq/__tests__/sum.test.js",
        "line": 14,
      },
      "meta": Object {},
      "output": null,
      "runtime": 12,
      "status": Object {
        "type": "success",
      },
    },
    Object {
      "display_name": "the + operator with three operands 2 + 3 + 4 equals 9",
      "id": "__tests__/sum.test.js@19:5#0",
      "lineage": Array [
        "the + operator",
        "with three operands",
      ],
      "location": Object {
        "column": 5,
        "file": "<<REPLACED>>/e2e/abq/__tests__/sum.test.js",
        "line": 19,
      },
      "meta": Object {},
      "output": null,
      "runtime": 12,
      "status": Object {
        "type": "success",
      },
    },
  ],
]
`;

exports[`Reports all tests in a file 1`] = `
Array [
  Array [
    Object {
      "display_name": "the + operator 1 + 2 equals 3",
      "id": "__tests__/sum.test.js@10:3#0",
      "lineage": Array [
        "the + operator",
      ],
      "location": Object {
        "column": 3,
        "file": "<<REPLACED>>/e2e/abq/__tests__/sum.test.js",
        "line": 10,
      },
      "meta": Object {},
      "output": null,
      "runtime": 12,
      "status": Object {
        "type": "success",
      },
    },
    Object {
      "display_name": "the + operator 2 + 3 equals 5",
      "id": "__tests__/sum.test.js@14:3#1",
      "lineage": Array [
        "the + operator",
      ],
      "location": Object {
        "column": 3,
        "file": "<<REPLACED>>/e2e/abq/__tests__/sum.test.js",
        "line": 14,
      },
      "meta": Object {},
      "output": null,
      "runtime": 12,
      "status": Object {
        "type": "success",
      },
    },
    Object {
      "display_name": "the + operator with three operands 2 + 3 + 4 equals 9",
      "id": "__tests__/sum.test.js@19:5#0",
      "lineage": Array [
        "the + operator",
        "with three operands",
      ],
      "location": Object {
        "column": 5,
        "file": "<<REPLACED>>/e2e/abq/__tests__/sum.test.js",
        "line": 19,
      },
      "meta": Object {},
      "output": null,
      "runtime": 12,
      "status": Object {
        "type": "success",
      },
    },
  ],
]
`;
